<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_event">New</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="event_title">Event title</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
        
    <!-- Used in DrawerToggle -->
    <string name="drawer_open">drawerOpen</string>
    <string name="drawer_close">drawerClose</string>
    
</resources>
