<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add"
        android:icon="@drawable/icon_add"
        android:menuCategory="system"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_event"/>
    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_action_edit"
        android:menuCategory="alternative"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/edit_event"
        android:visible="false"/>
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:menuCategory="alternative"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete_event"
        android:visible="false"/>

</menu>